# omnitrackr-api

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  deploy.yml  main.yml
scripts/: synthesize.sh
src/: main.rs  validation.rs
